Concluido parcialmente a parte referente a GUI.